--- a/src/ru/sid/izk/modbus/frames/IZKModbusGUI.form
+++ b/src/ru/sid/izk/modbus/frames/IZKModbusGUI.form
@@ -1373,12 +1373,13 @@
           <component id="d172d" class="javax.swing.JTextField" binding="sensorAddressField">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="5" use-parent-layout="false">
-                <preferred-size width="200" height="20"/>
-                <maximum-size width="200" height="20"/>
+                <preferred-size width="300" height="20"/>
+                <maximum-size width="300" height="20"/>
               </grid>
             </constraints>
             <properties>
               <editable value="false"/>
+              <font name="Tahoma" size="18"/>
               <text value=""/>
             </properties>
           </component>
@@ -1390,110 +1391,130 @@
           <component id="6559a" class="javax.swing.JTextField" binding="humidityField">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="5" use-parent-layout="false">
-                <preferred-size width="200" height="20"/>
-                <maximum-size width="200" height="20"/>
+                <preferred-size width="300" height="20"/>
+                <maximum-size width="300" height="20"/>
               </grid>
             </constraints>
             <properties>
               <editable value="false"/>
+              <font name="Tahoma" size="18"/>
             </properties>
           </component>
           <component id="b707f" class="javax.swing.JTextField" binding="temperatureField">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="5" use-parent-layout="false">
-                <preferred-size width="200" height="20"/>
-                <maximum-size width="200" height="20"/>
+                <preferred-size width="300" height="20"/>
+                <maximum-size width="300" height="20"/>
               </grid>
             </constraints>
             <properties>
               <editable value="false"/>
+              <font name="Tahoma" size="18"/>
               <text value=""/>
             </properties>
           </component>
           <component id="37e76" class="javax.swing.JTextField" binding="densityField">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="5" use-parent-layout="false">
-                <preferred-size width="200" height="20"/>
-                <maximum-size width="200" height="20"/>
+                <preferred-size width="300" height="20"/>
+                <maximum-size width="300" height="20"/>
               </grid>
             </constraints>
             <properties>
               <editable value="false"/>
+              <font name="Tahoma" size="18"/>
               <text value=""/>
-            </properties>
-          </component>
-          <component id="43ae" class="javax.swing.JTextField" binding="timeField">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="5" use-parent-layout="false">
-                <preferred-size width="200" height="20"/>
-                <maximum-size width="200" height="20"/>
-              </grid>
-            </constraints>
-            <properties>
-              <editable value="false"/>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="b4595" class="javax.swing.JTextField" binding="dataField">
-            <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
-                <preferred-size width="200" height="20"/>
-                <maximum-size width="200" height="20"/>
-              </grid>
-            </constraints>
-            <properties>
-              <editable value="false"/>
             </properties>
           </component>
           <component id="e6e86" class="javax.swing.JTextField" binding="periodField">
             <constraints>
-              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
-                <preferred-size width="200" height="20"/>
-                <maximum-size width="200" height="20"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
+                <preferred-size width="300" height="20"/>
+                <maximum-size width="300" height="20"/>
               </grid>
             </constraints>
             <properties>
               <editable value="false"/>
+              <font name="Tahoma" size="18"/>
             </properties>
           </component>
           <component id="f3932" class="javax.swing.JTextField" binding="cs1Field">
             <constraints>
-              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
-                <preferred-size width="200" height="20"/>
-                <maximum-size width="200" height="20"/>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
+                <preferred-size width="300" height="20"/>
+                <maximum-size width="300" height="20"/>
               </grid>
             </constraints>
             <properties>
               <editable value="false"/>
+              <font name="Tahoma" size="18"/>
               <text value=""/>
             </properties>
           </component>
           <component id="a07d1" class="javax.swing.JTextField" binding="cs2Field">
             <constraints>
-              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
-                <preferred-size width="200" height="20"/>
-                <maximum-size width="200" height="20"/>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
+                <preferred-size width="300" height="20"/>
+                <maximum-size width="300" height="20"/>
               </grid>
             </constraints>
             <properties>
               <editable value="false"/>
+              <font name="Tahoma" size="18"/>
               <text value=""/>
             </properties>
           </component>
           <component id="b3679" class="javax.swing.JTextField" binding="errorField">
             <constraints>
-              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
-                <preferred-size width="200" height="20"/>
-                <maximum-size width="200" height="20"/>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
+                <preferred-size width="300" height="20"/>
+                <maximum-size width="300" height="20"/>
               </grid>
             </constraints>
             <properties>
               <editable value="false"/>
+              <font name="Tahoma" size="18"/>
               <text value=""/>
+            </properties>
+          </component>
+          <component id="43ae" class="javax.swing.JTextField" binding="timeField">
+            <constraints>
+              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="5" use-parent-layout="false">
+                <preferred-size width="300" height="20"/>
+                <maximum-size width="300" height="20"/>
+              </grid>
+            </constraints>
+            <properties>
+              <editable value="false"/>
+              <font name="Tahoma" size="18"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="b4595" class="javax.swing.JTextField" binding="dataField">
+            <constraints>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
+                <preferred-size width="300" height="20"/>
+                <maximum-size width="300" height="20"/>
+              </grid>
+            </constraints>
+            <properties>
+              <editable value="false"/>
+              <font name="Tahoma" size="18"/>
             </properties>
           </component>
         </children>
       </grid>
+      <component id="997e" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="5" use-parent-layout="false">
+            <preferred-size width="274" height="20"/>
+            <maximum-size width="300" height="20"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Текущие данные:"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
