--- a/src/ru/sid/izk/modbus/frames/IZKModbusGUI.form
+++ b/src/ru/sid/izk/modbus/frames/IZKModbusGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ru.sid.izk.modbus.frames.IZKModbusGUI">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1348" height="858"/>
+      <xy x="20" y="20" width="1340" height="858"/>
     </constraints>
     <properties>
       <toolTipText value="IZKModbus"/>
@@ -21,19 +21,12 @@
           <text value="Label"/>
         </properties>
       </component>
-      <component id="aed50" class="javax.swing.JCheckBox" binding="queryBox">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="84" height="21"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Опрос канала"/>
-        </properties>
-      </component>
       <component id="d875c" class="javax.swing.JLabel" binding="nameStatLabel">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+            <maximum-size width="150" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value=""/>
@@ -41,7 +34,7 @@
       </component>
       <component id="728c6" class="javax.swing.JLabel" binding="statLabel">
         <constraints>
-          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
             <maximum-size width="150" height="-1"/>
           </grid>
@@ -52,7 +45,7 @@
       </component>
       <tabbedpane id="f5b1c" binding="tabbedPane1" default-binding="true">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="1000" height="600"/>
             <maximum-size width="1000" height="600"/>
           </grid>
@@ -1357,8 +1350,8 @@
           <component id="d172d" class="javax.swing.JTextField" binding="sensorAddressField">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="2" use-parent-layout="false">
-                <preferred-size width="300" height="20"/>
-                <maximum-size width="300" height="20"/>
+                <preferred-size width="300" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
             <properties>
@@ -1375,8 +1368,8 @@
           <component id="6559a" class="javax.swing.JTextField" binding="humidityField">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="2" use-parent-layout="false">
-                <preferred-size width="300" height="20"/>
-                <maximum-size width="300" height="20"/>
+                <preferred-size width="300" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
             <properties>
@@ -1387,8 +1380,8 @@
           <component id="b707f" class="javax.swing.JTextField" binding="temperatureField">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="2" use-parent-layout="false">
-                <preferred-size width="300" height="20"/>
-                <maximum-size width="300" height="20"/>
+                <preferred-size width="300" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
             <properties>
@@ -1400,8 +1393,8 @@
           <component id="37e76" class="javax.swing.JTextField" binding="densityField">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="2" use-parent-layout="false">
-                <preferred-size width="300" height="20"/>
-                <maximum-size width="300" height="20"/>
+                <preferred-size width="300" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
             <properties>
@@ -1413,8 +1406,8 @@
           <component id="e6e86" class="javax.swing.JTextField" binding="periodField">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="2" use-parent-layout="false">
-                <preferred-size width="300" height="20"/>
-                <maximum-size width="300" height="20"/>
+                <preferred-size width="300" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
             <properties>
@@ -1425,8 +1418,8 @@
           <component id="f3932" class="javax.swing.JTextField" binding="cs1Field">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="2" use-parent-layout="false">
-                <preferred-size width="300" height="20"/>
-                <maximum-size width="300" height="20"/>
+                <preferred-size width="300" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
             <properties>
@@ -1438,8 +1431,8 @@
           <component id="a07d1" class="javax.swing.JTextField" binding="cs2Field">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="2" use-parent-layout="false">
-                <preferred-size width="300" height="20"/>
-                <maximum-size width="300" height="20"/>
+                <preferred-size width="300" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
             <properties>
@@ -1451,8 +1444,8 @@
           <component id="b3679" class="javax.swing.JTextField" binding="errorField">
             <constraints>
               <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="2" use-parent-layout="false">
-                <preferred-size width="300" height="20"/>
-                <maximum-size width="300" height="20"/>
+                <preferred-size width="300" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
             <properties>
@@ -1464,8 +1457,8 @@
           <component id="43ae" class="javax.swing.JTextField" binding="timeField">
             <constraints>
               <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false">
-                <preferred-size width="300" height="20"/>
-                <maximum-size width="300" height="20"/>
+                <preferred-size width="300" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
             <properties>
@@ -1477,8 +1470,8 @@
           <component id="b4595" class="javax.swing.JTextField" binding="dataField">
             <constraints>
               <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="2" use-parent-layout="false">
-                <preferred-size width="300" height="20"/>
-                <maximum-size width="300" height="20"/>
+                <preferred-size width="300" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
             <properties>
@@ -1501,13 +1494,13 @@
       </component>
       <component id="55533" class="javax.swing.JComboBox" binding="channelsBox">
         <constraints>
-          <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
       <scrollpane id="35845">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="6" vsize-policy="7" hsize-policy="7" anchor="9" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="5" vsize-policy="7" hsize-policy="7" anchor="9" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="1000" height="150"/>
             <maximum-size width="1000" height="150"/>
           </grid>
@@ -1524,10 +1517,20 @@
           </component>
         </children>
       </scrollpane>
-      <component id="eb8f3" class="javax.swing.JButton" binding="terminalButton">
+      <component id="b57b5" class="javax.swing.JCheckBox" binding="queryBox">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="30"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="169" height="21"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Опрос канала"/>
+        </properties>
+      </component>
+      <component id="a77ec" class="javax.swing.JButton" binding="terminalButton">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="169" height="30"/>
             <maximum-size width="150" height="30"/>
           </grid>
         </constraints>
@@ -1535,6 +1538,11 @@
           <text value="Терминал"/>
         </properties>
       </component>
+      <hspacer id="a81dc">
+        <constraints>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
